[hw2]: dropout module was added

--- a/homeworks/hw2/solution_1.ipynb
+++ b/homeworks/hw2/solution_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "29d9f722",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "632246b5",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "77db9160",
    "metadata": {},
    "outputs": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "c1d1c939",
    "metadata": {},
    "outputs": [],
@@ -253,10 +253,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "31af5f6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Проверка слоя Linear ---\n",
+      "Выходы forward совпадают: True\n",
+      "Градиенты по входу dX совпадают: True\n",
+      "Градиенты по весам dW совпадают: True\n",
+      "Градиенты по смещению db совпадают: True\n",
+      "--------------------\n"
+     ]
+    }
+   ],
    "source": [
     "N, D_in, D_out = 16, 100, 10\n",
     "\n",
@@ -283,6 +296,129 @@
     "print(f\"Градиенты по входу dX совпадают: {torch.allclose(my_grad_x, x.grad)}\")\n",
     "print(f\"Градиенты по весам dW совпадают: {torch.allclose(my_linear.W.grad, torch_linear.weight.grad)}\")\n",
     "print(f\"Градиенты по смещению db совпадают: {torch.allclose(my_linear.b.grad, torch_linear.bias.grad)}\")\n",
+    "print(\"-\" * 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c46dfaab",
+   "metadata": {},
+   "source": [
+    "Реализация dropout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3a120cf3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dropout(Module):\n",
+    "    def __init__(self, p=0.5):\n",
+    "        super().__init__()\n",
+    "        if p < 0 or p >= 1:\n",
+    "            raise ValueError(\"dropout probability has to be between 0 and 1, but got {}\".format(p))\n",
+    "        self.p = p\n",
+    "        self.scale = 1.0 / (1.0 - self.p)\n",
+    "        self.cache = {}\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        if not self.training or self.p == 0:\n",
+    "            return x\n",
+    "        \n",
+    "        mask = (torch.rand_like(x) > self.p).float() * self.scale\n",
+    "        self.cache['mask'] = mask\n",
+    "        \n",
+    "        return x * mask\n",
+    "\n",
+    "    def backward(self, grad_output):\n",
+    "        if not self.training or self.p == 0:\n",
+    "            return grad_output\n",
+    "            \n",
+    "        mask = self.cache.get('mask')\n",
+    "        if mask is None:\n",
+    "            raise RuntimeError(\"backward called without a prior forward call in train mode\")\n",
+    "            \n",
+    "        return grad_output * mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "5a4bfb31",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Проверка в режиме TRAIN ---\n",
+      "Вероятность зануления (p): 0.5\n",
+      "Количество элементов в тензоре: 100000\n",
+      "Фактическое количество нулей: 49980\n",
+      "Ожидаемое количество нулей (примерно): 50000\n",
+      "Значение не-нулевых элементов: 2.0\n",
+      "Ожидаемое значение (1 / (1 - p)): 2.0\n",
+      "Статистика в режиме train выглядит корректно: True\n",
+      "--------------------\n",
+      "\n",
+      "--- Проверка в режиме EVAL ---\n",
+      "Выход в режиме eval идентичен входу: True\n",
+      "--------------------\n",
+      "\n",
+      "--- Проверка backward ---\n",
+      "Градиент на входе равен grad_output * mask: True\n",
+      "--------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 0.5\n",
+    "N, D = 1000, 100\n",
+    "\n",
+    "my_dropout = Dropout(p=p)\n",
+    "x = torch.ones(N, D)\n",
+    "\n",
+    "# --- Проверка в режиме TRAIN ---\n",
+    "print(\"--- Проверка в режиме TRAIN ---\")\n",
+    "my_dropout.train()\n",
+    "out_train = my_dropout(x)\n",
+    "\n",
+    "num_zeros = (out_train == 0).sum().item()\n",
+    "expected_zeros = p * x.numel()\n",
+    "scale = 1.0 / (1.0 - p)\n",
+    "non_zero_val = out_train[out_train != 0][0].item()\n",
+    "\n",
+    "print(f\"Вероятность зануления (p): {p}\")\n",
+    "print(f\"Количество элементов в тензоре: {x.numel()}\")\n",
+    "print(f\"Фактическое количество нулей: {num_zeros}\")\n",
+    "print(f\"Ожидаемое количество нулей (примерно): {expected_zeros:.0f}\")\n",
+    "print(f\"Значение не-нулевых элементов: {non_zero_val:.1f}\")\n",
+    "print(f\"Ожидаемое значение (1 / (1 - p)): {scale:.1f}\")\n",
+    "print(f\"Статистика в режиме train выглядит корректно: {abs(num_zeros - expected_zeros) < 100 and torch.allclose(torch.tensor(non_zero_val), torch.tensor(scale))}\")\n",
+    "print(\"-\" * 20)\n",
+    "\n",
+    "\n",
+    "# --- Проверка в режиме EVAL ---\n",
+    "print(\"\\n--- Проверка в режиме EVAL ---\")\n",
+    "my_dropout.eval()\n",
+    "out_eval = my_dropout(x)\n",
+    "\n",
+    "print(f\"Выход в режиме eval идентичен входу: {torch.allclose(out_eval, x)}\")\n",
+    "print(\"-\" * 20)\n",
+    "\n",
+    "\n",
+    "# --- Проверка backward ---\n",
+    "print(\"\\n--- Проверка backward ---\")\n",
+    "my_dropout.train()\n",
+    "x_rand = torch.randn(N, D)\n",
+    "out = my_dropout(x_rand)\n",
+    "grad_out = torch.randn_like(x_rand)\n",
+    "grad_in = my_dropout.backward(grad_out)\n",
+    "mask = my_dropout.cache['mask']\n",
+    "\n",
+    "print(f\"Градиент на входе равен grad_output * mask: {torch.allclose(grad_in, grad_out * mask)}\")\n",
     "print(\"-\" * 20)"
    ]
   }
