[hw2]: sigmoid module was added

--- a/homeworks/hw2/solution_1.ipynb
+++ b/homeworks/hw2/solution_1.ipynb
@@ -421,6 +421,66 @@
     "print(f\"Градиент на входе равен grad_output * mask: {torch.allclose(grad_in, grad_out * mask)}\")\n",
     "print(\"-\" * 20)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5426614a",
+   "metadata": {},
+   "source": [
+    "Реализация sigmoid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d49936b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Sigmoid(Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.cache = {}\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        output = 1 / (1 + torch.exp(-x))\n",
+    "        self.cache['output'] = output\n",
+    "        return output\n",
+    "\n",
+    "    def backward(self, grad_output):\n",
+    "        output = self.cache['output']\n",
+    "        local_grad = output * (1 - output)\n",
+    "        return grad_output * local_grad"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a23ec1e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N, D = 10, 5\n",
+    "\n",
+    "my_sigmoid = Sigmoid()\n",
+    "torch_sigmoid = torch.nn.Sigmoid()\n",
+    "\n",
+    "x = torch.randn(N, D)\n",
+    "x.requires_grad_(True)\n",
+    "my_x = x.clone().detach().requires_grad_(True)\n",
+    "\n",
+    "my_out = my_sigmoid(my_x)\n",
+    "torch_out = torch_sigmoid(x)\n",
+    "\n",
+    "grad_output = torch.randn(N, D)\n",
+    "torch_out.backward(grad_output)\n",
+    "my_grad_x = my_sigmoid.backward(grad_output.clone())\n",
+    "\n",
+    "print(\"--- Проверка слоя Sigmoid ---\")\n",
+    "print(f\"Выходы forward совпадают: {torch.allclose(my_out, torch_out)}\")\n",
+    "print(f\"Градиенты по входу dX совпадают: {torch.allclose(my_grad_x, x.grad)}\")\n",
+    "print(\"-\" * 20)"
+   ]
   }
  ],
  "metadata": {
