[hw2]: relu module was added

--- a/homeworks/hw2/solution_1.ipynb
+++ b/homeworks/hw2/solution_1.ipynb
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d49936b1",
    "metadata": {},
    "outputs": [],
@@ -455,10 +455,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "a23ec1e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Проверка слоя Sigmoid ---\n",
+      "Выходы forward совпадают: True\n",
+      "Градиенты по входу dX совпадают: True\n",
+      "--------------------\n"
+     ]
+    }
+   ],
    "source": [
     "N, D = 10, 5\n",
     "\n",
@@ -477,6 +488,76 @@
     "my_grad_x = my_sigmoid.backward(grad_output.clone())\n",
     "\n",
     "print(\"--- Проверка слоя Sigmoid ---\")\n",
+    "print(f\"Выходы forward совпадают: {torch.allclose(my_out, torch_out)}\")\n",
+    "print(f\"Градиенты по входу dX совпадают: {torch.allclose(my_grad_x, x.grad)}\")\n",
+    "print(\"-\" * 20)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5222c68",
+   "metadata": {},
+   "source": [
+    "Реализация ReLU"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "388a6419",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ReLU(Module):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.cache = {}\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        self.cache['x'] = x\n",
+    "        return torch.maximum(torch.tensor(0.0), x)\n",
+    "\n",
+    "    def backward(self, grad_output):\n",
+    "        x = self.cache['x']\n",
+    "        mask = (x > 0).float()\n",
+    "        return grad_output * mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a33357d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Проверка слоя ReLU ---\n",
+      "Выходы forward совпадают: True\n",
+      "Градиенты по входу dX совпадают: True\n",
+      "--------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, D = 10, 5\n",
+    "\n",
+    "my_relu = ReLU()\n",
+    "torch_relu = torch.nn.ReLU()\n",
+    "\n",
+    "x = torch.randn(N, D)\n",
+    "x.requires_grad_(True)\n",
+    "my_x = x.clone().detach().requires_grad_(True)\n",
+    "\n",
+    "my_out = my_relu(my_x)\n",
+    "torch_out = torch_relu(x)\n",
+    "\n",
+    "grad_output = torch.randn(N, D)\n",
+    "torch_out.backward(grad_output)\n",
+    "my_grad_x = my_relu.backward(grad_output.clone())\n",
+    "\n",
+    "print(\"--- Проверка слоя ReLU ---\")\n",
     "print(f\"Выходы forward совпадают: {torch.allclose(my_out, torch_out)}\")\n",
     "print(f\"Градиенты по входу dX совпадают: {torch.allclose(my_grad_x, x.grad)}\")\n",
     "print(\"-\" * 20)"
