[hw2]: softmax module was added

--- a/homeworks/hw2/solution_1.ipynb
+++ b/homeworks/hw2/solution_1.ipynb
@@ -562,6 +562,82 @@
     "print(f\"Градиенты по входу dX совпадают: {torch.allclose(my_grad_x, x.grad)}\")\n",
     "print(\"-\" * 20)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "108cb737",
+   "metadata": {},
+   "source": [
+    "Реализация SoftMax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "6c1c5ea9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Softmax(Module):\n",
+    "    def __init__(self, dim=-1):\n",
+    "        super().__init__()\n",
+    "        self.dim = dim\n",
+    "        self.cache = {}\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x_stable = x - x.max(dim=self.dim, keepdim=True).values\n",
+    "        exps = torch.exp(x_stable)\n",
+    "        output = exps / exps.sum(dim=self.dim, keepdim=True)\n",
+    "        self.cache['output'] = output\n",
+    "        return output\n",
+    "\n",
+    "    def backward(self, grad_output):\n",
+    "        s = self.cache['output']\n",
+    "        dot_product = (grad_output * s).sum(dim=self.dim, keepdim=True)\n",
+    "        grad_x = s * (grad_output - dot_product)\n",
+    "        return grad_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "32ff7c9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- Проверка слоя Softmax ---\n",
+      "Выходы forward совпадают: True\n",
+      "Градиенты по входу dX совпадают: True\n",
+      "--------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "N, D = 10, 5\n",
+    "dim = -1\n",
+    "\n",
+    "my_softmax = Softmax(dim=dim)\n",
+    "torch_softmax = torch.nn.Softmax(dim=dim)\n",
+    "\n",
+    "x = torch.randn(N, D)\n",
+    "x.requires_grad_(True)\n",
+    "my_x = x.clone().detach().requires_grad_(True)\n",
+    "\n",
+    "my_out = my_softmax(my_x)\n",
+    "torch_out = torch_softmax(x)\n",
+    "\n",
+    "grad_output = torch.randn(N, D)\n",
+    "torch_out.backward(grad_output)\n",
+    "my_grad_x = my_softmax.backward(grad_output.clone())\n",
+    "\n",
+    "print(\"--- Проверка слоя Softmax ---\")\n",
+    "print(f\"Выходы forward совпадают: {torch.allclose(my_out, torch_out)}\")\n",
+    "print(f\"Градиенты по входу dX совпадают: {torch.allclose(my_grad_x, x.grad)}\")\n",
+    "print(\"-\" * 20)"
+   ]
   }
  ],
  "metadata": {
