[hw3]: refactor of first solution and task 2 base solution

--- a/homeworks/hw3/task_1.ipynb
+++ b/homeworks/hw3/task_1.ipynb
@@ -11,7 +11,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "import regex as re\n",
-    "from collections import defaultdict\n",
+    "from collections import defaultdict, Counter\n",
     "\n",
     "class BPETokenizer:\n",
     "    def __init__(self, vocab_size=3000):\n",
@@ -115,6 +115,8 @@
     }
    ],
    "source": [
+    "import requests\n",
+    "\n",
     "def download_robust(filename, urls):\n",
     "    headers = {'User-Agent': 'Mozilla/5.0'}\n",
     "    for url in urls:\n",
@@ -193,6 +195,8 @@
     }
    ],
    "source": [
+    "from collections import Counter\n",
+    "\n",
     "def calculate_metrics(tokenizer, text, domain_name):\n",
     "    tokens = tokenizer.encode(text)\n",
     "    num_tokens = len(tokens)\n",
@@ -272,6 +276,7 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "x_vals = [x[0] for x in tokenizer.history]\n",
     "y_vals = [x[1] for x in tokenizer.history]\n",
     "\n",
@@ -493,6 +498,237 @@
     "print(generate_text(model, \"Князь Андрей\", length=100))\n",
     "print(\"-\" * 30)\n",
     "print(generate_text(model, \"Пьер\", length=100))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1b3c017",
+   "metadata": {},
+   "source": [
+    "Далее задание 1.2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "ba042aa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import GPT2LMHeadModel, Trainer, TrainingArguments\n",
+    "from torch.utils.data import Dataset\n",
+    "import torch\n",
+    "\n",
+    "class CustomTextDataset(Dataset):\n",
+    "    def __init__(self, tokenizer, text, block_size=128):\n",
+    "        self.examples = []\n",
+    "        tokenized_text = tokenizer.encode(text)\n",
+    "        for i in range(0, len(tokenized_text) - block_size, block_size):\n",
+    "            self.examples.append(tokenized_text[i:i + block_size])\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.examples)\n",
+    "\n",
+    "    def __getitem__(self, i):\n",
+    "        return torch.tensor(self.examples[i], dtype=torch.long)\n",
+    "\n",
+    "def custom_data_collator(features):\n",
+    "    batch = torch.stack(features)\n",
+    "    return {\"input_ids\": batch, \"labels\": batch}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a71361cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GPT2LMHeadModel(\n",
+       "  (transformer): GPT2Model(\n",
+       "    (wte): Embedding(3000, 768)\n",
+       "    (wpe): Embedding(1024, 768)\n",
+       "    (drop): Dropout(p=0.1, inplace=False)\n",
+       "    (h): ModuleList(\n",
+       "      (0-11): 12 x GPT2Block(\n",
+       "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        (attn): GPT2Attention(\n",
+       "          (c_attn): Conv1D(nf=2304, nx=768)\n",
+       "          (c_proj): Conv1D(nf=768, nx=768)\n",
+       "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
+       "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "        (mlp): GPT2MLP(\n",
+       "          (c_fc): Conv1D(nf=3072, nx=768)\n",
+       "          (c_proj): Conv1D(nf=768, nx=3072)\n",
+       "          (act): NewGELUActivation()\n",
+       "          (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+       "  )\n",
+       "  (lm_head): Linear(in_features=768, out_features=3000, bias=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_name = \"gpt2\"\n",
+    "model = GPT2LMHeadModel.from_pretrained(model_name)\n",
+    "\n",
+    "new_vocab_size = len(tokenizer.vocab)\n",
+    "model.config.vocab_size = new_vocab_size\n",
+    "model.config.pad_token_id = 1\n",
+    "model.resize_token_embeddings(new_vocab_size)\n",
+    "\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "b66e9726",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "block_size = 128\n",
+    "train_dataset = CustomTextDataset(tokenizer, train_text, block_size=block_size)\n",
+    "eval_dataset = CustomTextDataset(tokenizer, test_text_literature[:5000], block_size=block_size)\n",
+    "\n",
+    "training_args = TrainingArguments(\n",
+    "    output_dir=\"./gpt2-rus-bpe\",\n",
+    "    overwrite_output_dir=True,\n",
+    "    num_train_epochs=3,\n",
+    "    per_device_train_batch_size=8,\n",
+    "    gradient_accumulation_steps=4,\n",
+    "    learning_rate=5e-4,\n",
+    "    save_steps=1000,\n",
+    "    logging_steps=100,\n",
+    "    report_to=\"none\",\n",
+    "    eval_strategy=\"no\"\n",
+    ")\n",
+    "\n",
+    "trainer = Trainer(\n",
+    "    model=model,\n",
+    "    args=training_args,\n",
+    "    train_dataset=train_dataset,\n",
+    "    eval_dataset=eval_dataset,\n",
+    "    data_collator=custom_data_collator,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "844df42d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='333' max='333' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [333/333 24:19, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>100</td>\n",
+       "      <td>6.228200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>200</td>\n",
+       "      <td>4.971000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>300</td>\n",
+       "      <td>4.524800</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=333, training_loss=5.160469994530663, metrics={'train_runtime': 1463.158, 'train_samples_per_second': 7.223, 'train_steps_per_second': 0.228, 'total_flos': 690398871552000.0, 'train_loss': 5.160469994530663, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "d85bd5ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "------------------------------\n",
+      "Князь Андрей, и не устроить уже в первый раз в первый раз существенным, а всё сделалась сомнения, что не смотра по ложу, что бы, но он селый мамятенность волния. Потом принял его в это время, не отвечали, но что князь Андрей вывучила, что он всё прусара князя Андрея, и что ты не имеющими глазами. Я не отвечать, что\n",
+      "------------------------------\n",
+      "Пьер. Берг, у него в Москву, а я бы за него, и как бы мне счастьеется, как бы делает в Москву; но не польте, и он, как бы я бы не за это то, что я бы он должен был? И я буду, что я бы не заставили, но и мне не думал Пьер, – так он. И я не в руках, что я не буду? Я тебе, я\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_gpt2(model, start_str, length=100, temperature=0.8):\n",
+    "    model.eval()\n",
+    "    context_ids = tokenizer.encode(start_str)\n",
+    "    model_cpu = model.to(\"cpu\")\n",
+    "    input_ids = torch.tensor([context_ids]).to(\"cpu\")\n",
+    "    \n",
+    "    with torch.no_grad():\n",
+    "        output_ids = model_cpu.generate(\n",
+    "            input_ids,\n",
+    "            max_length=length + len(context_ids),\n",
+    "            temperature=temperature,\n",
+    "            do_sample=True,\n",
+    "            top_k=50,\n",
+    "            top_p=0.95,\n",
+    "            pad_token_id=1,\n",
+    "            eos_token_id=0\n",
+    "        )\n",
+    "    \n",
+    "    generated_tokens = output_ids[0].tolist()\n",
+    "    return tokenizer.decode(generated_tokens)\n",
+    "print(\"-\" * 30)\n",
+    "print(generate_gpt2(model, \"Князь Андрей\"))\n",
+    "print(\"-\" * 30)\n",
+    "print(generate_gpt2(model, \"Пьер\"))\n",
+    "\n"
    ]
   }
  ],
